--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 
 body {
     background-color: bisque;
-    margin: auto;
+    margin: 10px
     
 }
 
@@ -63,7 +63,7 @@ label{
 input {
     height: 30px;
     color: antiquewhite;
-    border-radius: 20px;
+    border-radius: 10px;
     border: none
 }
 
